<resources>
    <string name="app_name">Akarr</string>
    <string name="splash_text">All Right Reserved AhmadAtrach@2019</string>
    <string name="sign_in_text0">You already have an account?</string>
    <string name="sign_in_text1">Sign in</string>
    <string name="sign_up_text">Sign up</string>
    <string name="create_account_button">Create Account</string>
    <string name="or">Or Register With</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="email">Mail@example.com</string>
    <string name="reqeated_email">Repeat Your Email</string>
    <string name="input_error_name">please enter the name</string>
    <string name="input_error_email">please enter the mail</string>
    <string name="input_error_email_invalid">email is invalid</string>
    <string name="input_error_password">please enter the password</string>
    <string name="input_error_password_length">password should be greater then 8 characters</string>
    <string name="input_error_email_didnot_match">email does not match with the mail</string>
    <string name="registration_success">registration success</string>
    <string name="welocme_text">Welcome !</string>
    <string name="bestchoice_text">Akar is the best choice to find your property</string>
    <string name="policies">by clicking sign up you are agreeing our the privacy policy</string>
    <string name="login_successful">login successfully</string>
    <string name="login_failed">check password and email</string>
    <string name="title_search">Search</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
        <string-array name="array">
            <item>Apartment</item>
            <item>Land</item>
            <item>Full floor</item>
        </string-array>
</resources>

