<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:persistentDrawingCache="animation"
    tools:context=".registerActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="105dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/house" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="172dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="12dp"
        android:width="128sp"
        android:height="35sp"
        android:background="@drawable/button_background"
        android:elevation="2dp"
        android:fontFamily="@font/arabiclight"
        android:onClick="onClick"
        android:text="@string/create_account_button"
        android:textAllCaps="false"
        android:textColor="@color/color_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arabiclight"
            android:paddingRight="3dp"
            android:text="@string/sign_in_text0"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/arabiclight"
            android:paddingRight="3dp"
            android:text="@string/sign_in_text1"
            android:textColor="@color/colorSecond"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginEnd="103dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60sp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/google_icon" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="120dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/facebook_icon" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/tweeter_icon" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="189dp"
        android:layout_marginEnd="189dp"
        android:fontFamily="@font/arabiclight"
        android:text="@string/or"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="189dp"
        android:layout_marginEnd="189dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/arabiclight"
        android:text="@string/create_account_button"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/repeated_mail"
        android:layout_width="324dp"
        android:layout_height="44dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="25dp"
        android:hint="@string/reqeated_email"
        android:textColorHint="@color/colorPrimary"
        android:drawableStart="@drawable/mail_icon"
        android:drawablePadding="10dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:fontFamily="@font/arabiclight"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/button_register"
        app:layout_constraintEnd_toEndOf="@+id/mail"
        app:layout_constraintStart_toStartOf="@+id/mail" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="324dp"
        android:layout_height="44dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="12dp"
        android:drawableStart="@drawable/mail_icon"
        android:drawablePadding="10dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="@color/colorPrimary"
        android:fontFamily="@font/arabiclight"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/repeated_mail"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="324dp"
        android:layout_height="44dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="@color/colorPrimary"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/mail"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/username" />

    <EditText
        android:drawableStart="@drawable/persone_icon"
        android:drawablePadding="10dp"
        android:id="@+id/username"
        android:layout_width="324dp"
        android:layout_height="44dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/Username"
        android:textColorHint="@color/colorPrimary"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

</androidx.constraintlayout.widget.ConstraintLayout>